# aoc2025

./: CMakeLists.txt  README.txt  advent.hpp  day1.cpp  day1.hpp  day2.cpp  day2.hpp  day3.cpp  day3.hpp  day4.cpp  day4.hpp  day5.cpp  day5.hpp
test/: day1.cpp  day2.cpp  day3.cpp  day4.cpp  day5.cpp
